# OpenBG

./: .gitignore  Cargo.toml  README.md  VALIDATION.md  roadmap.md
apps/openbg-area/: Cargo.toml
apps/openbg-area/src/: main.rs
apps/openbg-inspect/: Cargo.toml
apps/openbg-inspect/src/: main.rs
crates/openbg-catalog/: Cargo.toml
crates/openbg-catalog/src/: lib.rs
crates/openbg-content/: Cargo.toml
crates/openbg-content/src/: lib.rs
crates/openbg-domain/: Cargo.toml
crates/openbg-domain/src/: id.rs  lib.rs  navigation.rs  resource.rs  time.rs
crates/openbg-formats/: Cargo.toml
crates/openbg-formats/src/: are.rs  bam.rs  bcs.rs  bif.rs  bmp.rs  cre.rs  dlg.rs  error.rs  ids.rs  itm.rs  key.rs  lib.rs  reader.rs  sto.rs  tis.rs  tlk.rs  two_da.rs  wed.rs
crates/openbg-sim/: Cargo.toml
crates/openbg-sim/src/: lib.rs  navigation.rs
engine/adapters/: tis.rs  wed.rs
engine/converters/: wed_to_area.rs
engine/core/: area.rs  asset.rs
engine/io/: fs_source.rs  loader.rs  source.rs
scripts/: validate-area-viewer.sh
