[package]
name = "openbg-area"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bevy = { version = "0.19.0", default-features = false, features = [
    "2d_bevy_render",
    "default_app",
    "bevy_winit",
    "multi_threaded",
    "std",
    "x11",
] }
openbg-domain = { path = "../../crates/openbg-domain" }
openbg-formats = { path = "../../crates/openbg-formats" }

[lints]
workspace = true

