[package]
name = "openbg-area"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bevy = { version = "0.19.0", default-features = false, features = [
    "2d_bevy_render",
    "default_app",
    "bevy_winit",
    "bevy_text",
    "default_font",
    "multi_threaded",
    "std",
    "x11",
] }
openbg-catalog = { path = "../../crates/openbg-catalog" }
openbg-content = { path = "../../crates/openbg-content" }
openbg-domain = { path = "../../crates/openbg-domain" }
openbg-sim = { path = "../../crates/openbg-sim" }

[lints]
workspace = true
