[package]
name = "openbg-inspect"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
openbg-catalog = { path = "../../crates/openbg-catalog" }
openbg-content = { path = "../../crates/openbg-content" }
openbg-domain = { path = "../../crates/openbg-domain" }

[lints]
workspace = true

